differenziation costumer and employee

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Welcome to your Dashboard</h1>
     <p>You are logged in!</p>
+    <div class="form-footer">
+        <p>Already you a Employee? <a href="{% url 'employee_dashboard' %}">Login here</a></p>
+    </div>
 </body>
 </html>
 
