--- a/frontend/templates/dashboard.html
+++ b/frontend/templates/dashboard.html
@@ -1,16 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Customer Dashboard</title>
 </head>
 <body>
-    <h1>Welcome to your Dashboard</h1>
-    <p>You are logged in!</p>
-    <div class="form-footer">
-        <p>Already you a Employee? <a href="{% url 'employee_dashboard' %}">Login here</a></p>
-    </div>
+    <h1>Welcome to Your Dashboard</h1>
+    <p>You are logged in as a customer.</p>
+    <a href="{% url 'place_order' %}">Place a Pizza Order</a>
 </body>
 </html>
-
