--- a/frontend/templates/order_templates/place_order.html
+++ b/frontend/templates/order_templates/place_order.html
@@ -5,31 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Dashboard</title>
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles_order.css' %}">
 </head>
 <body>
-    <h1>Welcome to your Dashboard</h1>
-    <p>You are logged in as {{ user.username }}!</p>
+    <div class="container">
+        <h1>Hello {{ user.username }}!</h1>
+        <h2>What you want to order?</h2>
 
-    <!-- Pizzas Order Section -->
-    <h2>Order Pizzas</h2>
-    <form method="post" action="{% url 'place_order' %}">
-        {% csrf_token %}
-        <ul>
-            {% for pizza in pizzas %}
-            <li>
-                <input type="checkbox" name="pizza" value="{{ pizza.id }}">
-                {{ pizza.name }} - {{ pizza.price }} USD
-                <label>Quantity:</label>
-                <input type="number" name="quantity" value="1" min="1">
-            </li>
-            {% endfor %}
-        </ul>
-        <button type="submit">Place Order</button>
-    </form>
+        <!-- Pizzas Order Section -->
+        <form method="post" action="{% url 'place_order' %}">
+            {% csrf_token %}
+            <div class="pizza-list">
+                {% for pizza in pizzas %}
+                <div class="pizza-item">
+                    <label>
+                        <input type="checkbox" name="pizza_{{ pizza.id }}" value="{{ pizza.id }}">
+                        {{ pizza.name }} - {{ pizza.price }} USD
+                    </label>
+                    <label>
+                        Quantity:
+                        <input type="number" name="quantity_{{ pizza.id }}" value="1" min="1">
+                    </label>
+                </div>
+                {% endfor %}
+            </div>
+            <button type="submit">Place Order</button>
+        </form>
 
-    <div class="form-footer">
-        <p><a href="{% url 'login' %}">Logout</a></p>
+        <div class="footer">
+            <div class="check-orders-button">
+                <a href="{% url 'customer_orders' %}">Check Orders</a>
+            </div>
+            <div class="logout">
+                <p><a href="{% url 'login' %}">Logout</a></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
